--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ needs, without any interaction necessary.
 <p style="float:right; position:relative; top:-30px;">
 <!-- <p style="text-align: center;"> -->
 <span class="downloadbox-border" >
-<a href="/fai-cd/faicd64-large_5.2.iso" style="text-decoration: none">
+<a href="/fai-cd/faicd64-large_5.3.2.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO (957 MB)</span>
 </a>
 </span>
@@ -55,7 +55,7 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
-<li>[16 Oct 2016] <b>New ISO images for FAI 5.2</b> </li>
+<li>[12 Dec 2016] <b>FAI 5.3.2 release and new ISO images</b> </li>
 <li>[14 Oct 2016] <b>FAI 5.2 is released, FAI is going to the cloud</b> </li>
 <li>[31 Jan 2016] <b>
 Thomas gave a talk at <a href="https://fosdem.org/2016/schedule/event/fai/">FOSDEM 2016</a></b></li>
