--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -32,8 +32,8 @@
 <br>
 <br>
 <span class="downloadbox-border" >
-<a href="faicd64-large_5.3.2.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO large  &nbsp; (963 MB) </span>
+<a href="faicd64-large_5.3.3.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO large  &nbsp; (962 MB) </span>
 </a>
 </span>
 &nbsp;
@@ -47,7 +47,7 @@ for CentOS 7 and Ubuntu 16.04
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-small_5.3.2.iso" style="text-decoration: none">
+<a href="faicd64-small_5.3.3.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO small &nbsp; (589 MB)</span>
 </a>
 </span>
@@ -61,7 +61,7 @@ basefiles are downloaded from the internet.
 <p>
 
 <span class="downloadbox-border" >
-<a href="faicd64-ubuntu-only_5.3.2.iso" style="text-decoration: none">
+<a href="faicd64-ubuntu-only_5.3.3.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO Ubuntu &nbsp; (1.1 GB)</span>
 </a>
 </span>
@@ -75,7 +75,7 @@ This image only installs Ubuntu 16.04 LTS. All packages are included.
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-autodiscover_5.3.2.iso" style="text-decoration: none">
+<a href="faicd64-autodiscover_5.3.3.iso" style="text-decoration: none">
 <span class="downloadbox-real" >Autodiscover CD &nbsp; (19 MB) </span>
 </a>
 </span>
@@ -87,15 +87,15 @@ Boot only image which autodiscovers the FAI server.
 <br>
 
 <p style="text-align: center;">
-All boot images use Debian jessie, FAI 5.2, kernel 3.16, amd64 architecture,
+All boot images use Debian jessie, FAI 5.3.3, kernel 3.16, amd64 architecture,
 <a href=sha256sums.asc>sha256sum.asc</a> of the ISO's
 <HR>
 <p>
 <br>
 
 <span class="downloadbox-border" >
-<a href="stretch-faicd64-small_5.2.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO small (stretch) &nbsp; (667 MB)</span>
+<a href="stretch-faicd64-small_5.3.3.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO small (Debian stretch, kernel 4.8) &nbsp; (666 MB)</span>
 </a>
 </span>
 &nbsp;
@@ -110,7 +110,7 @@ This is the FAI small ISO using Debian stretch.
 
 You can write the ISO image onto a USB stick using the command dd(1):
 <div class="featurebox">
-<pre>dd if=faicd64-large_5.2.iso of=/dev/sdX</pre> </div>
+<pre>dd if=faicd64-large_5.3.3.iso of=/dev/sdX</pre> </div>
 and replace /dev/sdX with the name of your USB device (e.g. /dev/sdf).
 
 <HR>
@@ -140,7 +140,7 @@ the installation media.
 
 <hr>
 <ADDRESS>
-Sat, 15 Oct 2016 21:49:57 +0200
+Tue, 10 Jan 2017 13:08:17 +0100
 </ADDRESS>
 
 
