--- a/reports/index.html
+++ b/reports/index.html
@@ -32,6 +32,30 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> René Bleisch, lastname climate =at= unibe dot TLD for schweiz
+<br><b>Date:</b> Thu, 12 Jan 2017 16:03:56 +0100
+<pre>
+How many hosts have you installed using fai? <b>30</b>
+Which version of fai are you using? <b>5.3.3</b>
+Which version are you using as your install kernel? Debian jessie
+
+Which types of hosts are you installing with fai? Linux workstations
+
+How do you boot your hosts? via network (PXE, DHCP)
+Does the default install kernel recognize all your hardware? yes
+
+Do you manage your configuration space under version control? yes, svn
+How big is your config space (Mbytes, # of files)? 570M, 745 files
+How many files do you have in ../config/files? 207 files
+What types of scripts are you using for local customization? shell, perl
+
+<b>What is the business of your company/organisation?</b> University, <a href="http://www.climate.unibe.ch">Climate and Environmental Physics Group, Univ. Bern</a>
+<br><b>Additional comments:</b>
+I use it to install all workstations of our Linux network, because its very easy and fast to do lots of installations.
+</pre> <HR>
+
+
+
 <b>From:</b> Brian Kroth bp+lastname a t engr d o t .wisc.edu
 <br><b>Date:</b> Mon, 17 Oct 2016 09:28:46 -0500
 
@@ -711,32 +735,6 @@ HPC clusters software (mpi, infiniband(mellanox/intel), lustre ecc ecc)
 
 We use fai for deployment and puppet for tiny customization on all nodes
 For large update we use fai softupdate. We use Fai sysinfo like rescue boot
-</pre> <HR>
-
-
-
-<b>From:</b> René Bleisch, lastname climate =at= unibe dot TLD for schweiz
-<br><b>Date:</b> Wed, 29 Jan 2014 13:33:24 +0100
-<pre>
-How many hosts have you installed using fai? <b>30</b>
-Which version of fai are you using? <b>4.0.6</b>
-Which version are you using as your install kernel? Debian wheezy plain
-
-Which types of hosts are you installing with fai? Linux workstations
-
-How do you boot your hosts? via network (PXE, DHCP)
-Does the default install kernel recognize all your hardware? no
-Which drivers are missing? atheros network card drivers, evtl. audio drivers
-        (I sometimes have problems with getting sound)
-
-Do you manage your configuration space under version control? yes, svn
-How big is your config space (Mbytes, # of files)? 107M, 365 files
-How many files do you have in ../config/files? 199 files
-What types of scripts are you using for local customization? shell, perl
-
-<b>What is the business of your company/organisation?</b> University, <a href="http://www.climate.unibe.ch">Climate and Environmental Physics Group, Univ. Bern</a>
-<br><b>Additional comments:</b>
-I use it to install all workstations of our Linux network, because its very easy and fast to do lots of installations.
 </pre> <HR>
 
 
