--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -95,13 +95,13 @@ All boot images use Debian jessie, FAI 5.3.3, kernel 3.16, amd64 architecture,
 
 <span class="downloadbox-border" >
 <a href="stretch-faicd64-small_5.3.3.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO small (Debian stretch, kernel 4.8) &nbsp; (666 MB)</span>
+<span class="downloadbox-real" >FAI ISO small (stretch) &nbsp; (666 MB)</span>
 </a>
 </span>
 &nbsp;
 &nbsp;
 &nbsp;
-This is the FAI small ISO using Debian stretch.
+This is the small FAI CD using Debian stretch, kernel 4.8.
 <p>
 <p> &nbsp;
 <p>
