--- a/reports/index.html
+++ b/reports/index.html
@@ -181,6 +181,7 @@ We have a default setup for all our servers, so there are only a few config file
 </pre> <HR>
 
 
+<a id=archive.org></a>
 <b>From:</b> Andrew Bezella, aLASTNAME =at= archive.org
 <br><b>Date:</b> Tue, 26 Apr 2016 13:52:21 -0700
 <pre>
@@ -800,6 +801,7 @@ What types of scripts are you using for local customization? shell mainly
 </pre> <HR>
 
 
+<a id=stayfriends></a>
 <b>From:</b> Steffen Eichler,  name1.name2 @ stayfriends.com
 <br><b>Date:</b> Wed, 20 Nov 2013 17:13:29 +0100
 <pre>
@@ -1556,7 +1558,6 @@ Deploying internal and client systems.
 </pre> <HR>
 
 
-<a id=stayfriends></a>
 <b>From:</b> Steffen Eichler, StayFriends, Germany
 <br><b>Date:</b> Mon, 2 May 2011 13:54:54 +0200
 <pre>
