--- a/reports/index.html
+++ b/reports/index.html
@@ -32,13 +32,31 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Michael Koeberle
+<br><b>Date:</b> Thu, 26 Jan 2017 10:14:34 +0100
+<pre>
+How many hosts have you installed using fai? <b>~30</b>
+Which version of fai are you using? <b>5.1.2</b>
+Which version are you using as your install kernel?  Debian
+Which types of hosts are you installing with fai? Desktops and servers
+
+How do you boot your hosts? PXE, USB-Stick
+Does the default install kernel recognize all your hardware? yep
+Do you manage your configuration space under version control? No
+How big is your config space (Mbytes, # of files)? 856k, #124
+How many files do you have in ../config/files? 26
+What types of scripts are you using for local customization? bash
+
+<b>What is the business of your company/organisation?</b> Educational
+</pre> <HR>
+
+
 <b>From:</b>Ian Kelling,  firstname @ == iankelling == dot = org
 <br><b>Date:</b> Thu, 19 Jan 2017 08:34:49 -0800
 <pre>
 How many hosts have you installed using fai? <b>5</b>
 Which version of fai are you using? <b>5.3.3~bpo8+2</b>
 Which version are you using as your install kernel? stock kernel
-
 Which types of hosts are you installing with fai? desktop, notebooks, VMs
 
 How do you boot your hosts? pxe, and pxe-kexec
@@ -77,7 +95,6 @@ shutdown or power loss.
 How many hosts have you installed using fai? <b>30</b>
 Which version of fai are you using? <b>5.3.3</b>
 Which version are you using as your install kernel? Debian jessie
-
 Which types of hosts are you installing with fai? Linux workstations
 
 How do you boot your hosts? via network (PXE, DHCP)
