--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ needs, without any interaction necessary.
 <p style="float:right; position:relative; top:-30px;">
 <!-- <p style="text-align: center;"> -->
 <span class="downloadbox-border" >
-<a href="/fai-cd/faicd64-large_5.3.3.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO (962 MB)</span>
+<a href="/fai-cd/faicd64-large_5.3.4.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO (963 MB)</span>
 </a>
 </span>
 </p>
@@ -55,10 +55,9 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
-<li>[ 9 Jan 2017] <b>FAI 5.3.3 release, new ISO images available</b> </li>
-<li>[14 Oct 2016] <b>FAI 5.2 is released, FAI is going to the cloud</b> </li>
-<li>[31 Jan 2016] <b>
-Thomas gave a talk at <a href="https://fosdem.org/2016/schedule/event/fai/">FOSDEM 2016</a></b></li>
+<li>[30 Jan 2017] <b>new ISO images available for FAI 5.3.4</b> </li>
+<li>[24 Jan 2017] <b>FAI 5.3.4 released</b> </li>
+<li>[14 Oct 2016] <b>FAI 5.2 is released, <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2016-October/011549.html">FAI is going to the cloud</a></b> </li>
 </ul>
 
 <div style="width:32%;float:right;position:relative; top:-110px;">
