add projects using FAI

--- a/features/index.html
+++ b/features/index.html
@@ -58,6 +58,16 @@ small part of your configuration to your local needs using hooks.
 
 <p>
 
+<h1>Other projects using FAI</h1>
+<ul>
+<li> <a href="https://wiki.debian.org/DebianLAN">DebianLAN</a>
+<li> <a href="http://openqrm.org/">OpenQRM</a>
+<li> <a href="https://qlustar.com/">Qlustar</a>
+<li> <a href="https://www.fusiondirectory.org/">FusionDirectory</a> (a fork of GOsa)
+<li> <a href="https://oss.gonicus.de/labs/gosa/">GOsa</a>
+</ul>
+<p>
+
 <h1>FAI Installation Steps</h1>
 <UL>
 <li> Network boot via PXE
