new french translation

--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -263,13 +263,14 @@ DE NODOS EN UN CLUSTER</a>
 <li> <b>French, fran&ccedil;ais</b>
 <ul>
 
+<li>French translation of the FAI guide <a href="/fai-guide-fr">html version</a> <a href="/fai-guide-fr.text">plain ASCII</a> and <a href="/fai-guide-fr.pdf">pdf</a> for FAI 5.3 (2017).
+
 <li> <a href="http://idum.fr/spip.php?article174">Installation d'un serveur FAI</a> 2010 (<a href="http://idum.fr/IMG/pdf/Installation_d_un_serveur_FAI.pdf">PDF</a>)
 
 <li> <a href="http://www.sinerj.org:9673/sinerj/sinerj/blogs/sig/stuff/documentation/ConfigSinerjOrg">
 Short documentation</a> about FAI and etch.
 
 <li> Le rapport de projet: <a href="http://www.loria.fr/~dexheime/documents/Rapport_FAI.pdf">Etude du syst&egrave;me FAI</a> (en fran&ccedil;ais, 2004/2005).
-<li>French translation of the FAI guide <a href="/fai-guide-fr">html version</a> <a href="/fai-guide-fr.txt">plain ASCII</a> and <a href="/fai-guide-fr.pdf">pdf</a> for FAI 2.6 (2004).
 </ul>
 
 <li> <b>Swedish</b>
@@ -303,7 +304,7 @@ Short documentation</a> about FAI and etch.
 
 <hr>
 <address>
-Tue, 23 Jun 2015 13:37:29 +0200
+Mon, 27 Mar 2017 15:58:56 +0200
 </address>
 
       </div>
