--- a/download/index.html
+++ b/download/index.html
@@ -41,22 +41,22 @@ The FAI software is divided in several packages:
 <li> Entry for /etc/apt/sources.list and for /etc/fai/apt/sources.list: 
 <p>
 <div class="featurebox"><h3>
-<pre>deb http://fai-project.org/download jessie koeln</pre>
+<pre>deb https://fai-project.org/download jessie koeln</pre>
 </h3></div>
 or
 <p>
 <div class="featurebox"><h3>
-<pre>deb http://fai-project.org/download wheezy koeln</pre>
+<pre>deb https://fai-project.org/download stretch koeln</pre>
 </h3></div>
 
 <li> The packages are signed with the gpg key of Thomas Lange. Two ways of getting the gpg key in your apt configuration
 
   <pre>gpg -a --recv-keys 074BCDE4; gpg -a --export 074BCDE4 | apt-key add -</pre>
-  <pre>wget -O - http://fai-project.org/download/074BCDE4.asc | sudo apt-key add -</pre>
+  <pre>wget -O - https://fai-project.org/download/074BCDE4.asc | sudo apt-key add -</pre>
 
 <p>
 
-<li> FAI packages from the official <A href=" http://fai-project.org/download/jessie/">project repository</A> or
+<li> FAI packages from the official <A href=" https://fai-project.org/download/jessie/">project repository</A> or
 from a <a href=http://cdn.debian.net/debian/pool/main/f/fai/>Debian mirror</a>.
 </ul>
 <hr />
