--- a/reports/index.html
+++ b/reports/index.html
@@ -32,6 +32,33 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Matthias, Computer Science Department of TU Darmstadt
+<br><b>Date:</b> Tue, 16 May 2017 16:29:28 +0200
+<pre>
+How many hosts have you installed using fai? <b> > 100</b>
+Which version of fai are you using? <b>4.3.2+wheezy1 and 5.3.6</b>
+Which version are you using as your install kernel? plain Debian kernel wheezy, jessie, stretch
+
+Which types of hosts are you installing with fai? currently VMs only
+
+How do you boot your hosts?
+ via network (PXE, DHCP): PXE / DHCP
+            using FAI-CD: -
+          from USB stick: -
+
+Does the default install kernel recognize all your hardware?
+Which drivers are missing? No problems, on the other hand I mainly have VMs...
+
+Do you manage your configuration space under version control? Not yet, git ist planned.
+How big is your config space (Mbytes, # of files)? 1,2MB in 101 files
+What types of scripts are you using for local customization? Some shell scripting, puppet
+
+<b>What is the business of your company/organisation?</b> education,
+<a href="https://www.informatik.tu-darmstadt.de">Computer Science Department of TU Darmstadt</a>
+Infrastructure and Students Pool service
+</pre> <HR>
+
+
 <b>From:</b> Michael Koeberle
 <br><b>Date:</b> Thu, 26 Jan 2017 10:14:34 +0100
 <pre>
