use long ID of my gpg key

--- a/download/index.html
+++ b/download/index.html
@@ -51,8 +51,8 @@ or
 
 <li> The packages are signed with the gpg key of Thomas Lange. Two ways of getting the gpg key in your apt configuration
 
-  <pre>gpg -a --recv-keys 074BCDE4; gpg -a --export 074BCDE4 | apt-key add -</pre>
-  <pre>wget -O - https://fai-project.org/download/074BCDE4.asc | sudo apt-key add -</pre>
+  <pre>gpg -a --recv-keys 2BF8D9FE074BCDE4; gpg -a --export 2BF8D9FE074BCDE4 | apt-key add -</pre>
+  <pre>wget -O - https://fai-project.org/download/2BF8D9FE074BCDE4.asc | sudo apt-key add -</pre>
 
 <p>
 
