--- a/reports/index.html
+++ b/reports/index.html
@@ -32,6 +32,37 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Bill MacAllister,  bill at ca-zephyr dot OORRGG
+<br><b>Date:</b> Tue, 27 Jun 2017 14:46:54 -0700
+
+<pre>
+How many hosts have you installed using fai? <b>~30</b> I expect this number to grow considerably.
+       In the end it will likely be 300-600 hosts.
+
+Which version of fai are you using? <b>5.3.2-0~6669~ubuntu16.04.1</b>
+Which version are you using as your install kernel? Debian Stretch 4.4.0-70-generic
+
+Which types of hosts are you installing with fai? Servers: ldap, dhcp, dns, web
+
+How do you boot your hosts?  PXE
+Does the default install kernel recognize all your hardware? Yes
+
+Do you manage your configuration space under version control? Yes.  Managed with git, deployed with chef
+How big is your config space (Mbytes, # of files)? 692K, 114
+How many files do you have in ../config/files?  24
+
+What types of scripts are you using for local customization?
+    shell, perl for FAI customization
+    chef when system is built
+
+<b>What is the business of your company/organisation?</b> file hosting/sharing web service
+<br><b>Additional comments:</b>
+ I work on supporting internal Linux systems. I wanted a better way to install Linux systems
+  so I installed FAI.  We have sites at remote locations and I am in
+  the process of bringing up local FAI servers for our remote sites.
+</pre> <HR>
+
+
 <b>From:</b> Matthias, Computer Science Department of TU Darmstadt
 <br><b>Date:</b> Tue, 16 May 2017 16:29:28 +0200
 <pre>
