--- a/reports/index.html
+++ b/reports/index.html
@@ -32,6 +32,35 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Russell Currie, University of Cambridge
+<br><b>Date:</b> Tue, 11 Jul 2017 09:17:05 +0100
+<pre>
+How many hosts have you installed using fai? <b>approx. 200 </b>
+
+Which version of fai are you using? <b>5.1.2</b>
+Which version are you using as your install kernel? Plain Debian kernel
+
+Which types of hosts are you installing with fai? Desktops
+
+How do you boot your hosts? Network - DHCP/iPXE
+Does the default install kernel recognize all your hardware? Yes.
+Do you manage your configuration space under version control? Yes, we now use git.
+
+How big is your config space (Mbytes, # of files)? 300K, 30
+How many files do you have in ../config/files? 14
+What types of scripts are you using for local customization? bash scipts
+
+<b>What is the business of your company/organisation?</b>  <a href="http://www.ch.cam.ac.uk">Department of Chemistry, University of Cambridge</a>
+<br><b>Additional comments:</b>
+We have been using FAI for X years and currently have approx 200 workstations running that have been installed with FAI.
+
+We're currently using FAI to partition and install Ubuntu Xenial on workstations. FAI puts in place a systemd service that
+hands over to ansible for configuration after a restart. We're then able to manage the configuration on our workstations
+through ansible. The hardware is fairly varied and FAI copes gracefully with this.
+</pre> <HR>
+
+
+
 <b>From:</b> Bill MacAllister,  bill at ca-zephyr dot OORRGG
 <br><b>Date:</b> Tue, 27 Jun 2017 14:46:54 -0700
 
