add link to docu

--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -60,6 +60,10 @@ How to add Debian Squeeze to your Debian Lenny FAI install server</a> (9/2011)
 <a href="https://pve.proxmox.com/wiki/Unattended_installation_of_Proxmox">blog entry<a/>
  (2015)
 
+<li> <a href="http://syslinux.fr/fai-debian/">Description of a
+configuration with extended PXE menu for Suse, RHEL.</a> Seems to be
+an older article, since they use a 2.6 kernel.
+
 <li> <a href="/doc/tech_fai.pdf">Practical description for FAI 4.2</a> (25 pages, 2014)
 
 <li> <a href="http://www.markus-gattol.name/ws/fai.html">Detailed description</a> (4/2011)
