add talks, videos, news

--- a/contact/index.html
+++ b/contact/index.html
@@ -49,7 +49,7 @@ for feedback, suggestions and comments
 <ul>
 <li> Worldwide commercial support for FAI is available from the
 author himself. Have a look at <a href="http://fai-cluster.de">fai-cluster.de</a>. Send
-an <a href="mailto:infoXXnospam@fai-cluster.de">email</a>.
+an <a href="mailto:ber=a=tun=g ==send=nospam@fai-cluster.de">email</a>.
 <li> The author also gives <a href="http://www.linuxhotel.de/kurs/fai/">tutorials
 at Linuxhotel</a>.
 <li> There are also other companies that have know-how in FAI and can help
