--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -39,6 +39,7 @@ contact before you start working.
 <h1>Topics for FAI 5.X</h1>
 <ul>
 <li> --- TODO ---
+<li> support for building cross architecture disk images, e.g. ARM 64bit
 <li> relax and recover from testing and release process!
 <li> --- DONE ---
 <li> new command for building cloud images with FAI
@@ -58,7 +59,7 @@ classes, date of last fai action
 <br>
 <HR>
 <ADDRESS>
-Wed, 14 Sep 2016 13:09:53 +0200
+Sun, 20 Aug 2017 18:00:13 +0200
 </ADDRESS>
 
       </div>
