--- a/talks/index.html
+++ b/talks/index.html
@@ -106,13 +106,16 @@ linux.conf.au Systems Administration Miniconf</a> 2015
 <li> A <a href="https://summit.debconf.org/debconf15/meeting/338/fai/">talk</a> at the Debian Conference (DebConf 15) in Heidelberg <a href="../doc/338-FAI--The-Universal-Installation-Tool.pdf">slides</a> and
 <a href="http://meetings-archive.debian.net/pub/debian-meetings/2015/debconf15/FAI_the_universal_deployment_tool.webm">video</a>
 
-
 <li> Lighning talk with a demo of FAI 5.0 at <a href="https://fosdem.org/2016/schedule/event/fai/">FOSDEM 2016</a>,
 <a href="https://fosdem.org/2016/schedule/event/fai/attachments/slides/1106/export/events/attachments/fai/slides/1106/fai_slides_fosdem_2016.pdf">Slides</a>, <a href="/videos/fai-fosdem-2016.mp4">Video</a>
 
-<li> <a href="https://debconf16.debconf.org/talks/3/">Thomas gave a
-live demo of FAI 5.0 </a> at DebConf 16 in Capetown.
+<li> <a href="https://debconf16.debconf.org/talks/3/">Thomas gave two
+live demos of FAI 5.0 </a> at DebConf 16 in Capetown.
 <a href="https://debconf16.debconf.org/talks/104/">Another live demo</a>
+
+<li> DebConf17, Montreal: Thomas gave a longer demo of FAI, including building customized disk images,
+<a href="http://meetings-archive.debian.net/pub/debian-meetings/2017/debconf17/fai-demo-session.vp8.webm">video</a>,
+<a href="https://debconf17.debconf.org/talks/85/">talk announcement</a>
 
 </ul>
 
@@ -133,7 +136,7 @@ and at
 <p>
 
 <ADDRESS>
-Mon, 01 Feb 2016 13:18:12 +0100
+Sun, 20 Aug 2017 18:28:20 +0200
 </ADDRESS>
 
  
