--- a/download/index.html
+++ b/download/index.html
@@ -74,7 +74,7 @@ deb http://archive.ubuntu.com/ubuntu/ xenial universe
 </h3></div>
 
 <a href="https://launchpad.net/~fai/+archive/ppa">PPA</a> containing
-FAI 5.0 and older versions:
+FAI 5.3 and older versions:
 
 <!--
  or the
@@ -94,9 +94,12 @@ deb http://ppa.launchpad.net/fai/ppa/ubuntu wily main
 
 
 
-<h1>Base files for Ubuntu, CentOS and Scientific Linux Cern</h1>
+<h1>Misc download</h1>
 <ul>
-<li> <a href="basefiles">Base files</a> are needed for Ubuntu, CentOS or SLC if your nfsroot is a Debian one.
+<li> <a href="basefiles">Base files</a> are needed for Ubuntu, CentOS
+or SLC or cross architecture installations</li>
+<li> <a href="misc">Misc</a>, like tar balls of a generic nfsroot</li>
+
 </ul>
 
       </div>
