--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -139,15 +139,19 @@ the installation media.
 </p>
 
 
-<h3> Debian 9 (stretch) Live CD, build using FAI. <a
-href="debian9-live-xfce.iso">Download ISO</a>
-<a href="http://wiki.fai-project.org/wiki/Use_nfsroot_for_diskless_clients">documentation</a>
+<h2> Misc downloads</h2>
 
-<h3>Old CD images for Debian 8 aka jessie are available <a href="../fai-cd-jessie">here</a></h3>
+<ul>
+<li> <a href="debian9-live-xfce.iso">Live CD</a> using Debian 9 (stretch)
+, <a href="http://wiki.fai-project.org/wiki/Use_nfsroot_for_diskless_clients">documentation</a>
+
+<li> <a href="../fai-cd-jessie">Old CD images</a>
+for Debian 8 aka jessie</li>
+</ul>
 
 <hr>
 <ADDRESS>
-Tue, 25 Jul 2017 17:16:12 +0200
+Wed, 06 Sep 2017 15:22:47 +0200
 </ADDRESS>
 
 
