--- a/guide/index.html
+++ b/guide/index.html
@@ -70,6 +70,11 @@ Search the man pages:
 <li> <a href="http://wiki.fai-project.org">http://wiki.fai-project.org</a>
 </ul>
 
+<h1>A FAI blog</h1>
+<ul>
+<li> <a href="http://blog.fai-project.org">http://blog.fai-project.org</a>
+</ul>
+
 <p>&nbsp <p>
 
 <h1> <a href="/talks">Talks about FAI</a></h1>
