--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@ needs, without any interaction necessary.
 <p style="clear:both;text-align:center;font-family: arial,verdana,sans-serif;font-size:150%">
 Motto: Plan your installation, and FAI installs your plan.</p>
 
-<h2 style="display:inline-block;width:40%">NEWS</h2>
+<h2 style="display:inline-block;width:50%">NEWS</h2>
 
 <ul>
-
+<li>[6 Sep 2017] <b>Have a look at <a
+href="https://debconf17.debconf.org/talks/85/">the video</a> of my FAI demo</b> at DebConf 17</li>
 <li>[4 Jul 2017] <b>new ISO images available for FAI 5.3.6</b> </li>
 <li>[20 Apr 2017] <b>FAI 5.3.6 released</b> </li>
 <li>[14 Oct 2016] <b>FAI 5.2 is released, <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2016-October/011549.html">FAI is going to the cloud</a></b> </li>
