--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -39,17 +39,16 @@ contact before you start working.
 <h1>Topics for FAI 5.X</h1>
 <ul>
 <li> --- TODO ---
-<li> support for building cross architecture disk images, e.g. ARM 64bit
 <li> relax and recover from testing and release process!
 <li> --- DONE ---
+<li> support for building cross architecture disk images, e.g. ARM 64bit
 <li> new command for building cloud images with FAI
 <li> btrfs and NVMe support for setup-storage
 <li> replace live-boot with dracut in fai-cd
 <li> support for cloning machines with file system images
 <li> major update of FAI guide
 <li> --- TODO's for the next versions ---
-<li> new option for fcopy, that replaces variables in the source
-file. Use %%_VARIABLENAME_%% ? check a mail concerning that
+<li> template engine for fcopy, for e.g simple variable substitution? Use %%_VARIABLENAME_%% ? check a mail concerning that
 <li> fai-monitor-gui: new option, remove host if everything went fine
 <li> add option -l to fai command. List status of fai. Show list of
 classes, date of last fai action
@@ -59,7 +58,7 @@ classes, date of last fai action
 <br>
 <HR>
 <ADDRESS>
-Sun, 20 Aug 2017 18:00:13 +0200
+Wed, 20 Sep 2017 21:56:13 +0200
 </ADDRESS>
 
       </div>
