--- a/questionnaire/index.html
+++ b/questionnaire/index.html
@@ -32,7 +32,7 @@ I'm very interested in your experiences with fai, bug reports, new ideas,...
 <br />
 Please send this questionnaire to &nbsp;  fai @=@ fai-project.org<br />
 All replies to this questionnaire are available at
-<a href="http://fai-project.org/reports">http://fai-project.org/reports</a>
+<a href="https://fai-project.org/reports">https://fai-project.org/reports</a>
 <p>
 Thanks in advance Thomas
 <pre>
