--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,7 @@
 	    <li class="active">
 	      <a href="/fai-cd/" title="Download">Download</a>
 	      <ul>
-		<li><a href="/fai-cd/" title="FAI-CD">FAI-CD</a></li>
+		<li><a href="/fai-cd/" title="FAI CD">FAI CD</a></li>
 		<li><a href="/download/">Packages</a></li>
 		<li><a href="/questionnaire/" title="FAI Questionaire">FAI questionaire</a></li>
 	      </ul>
