add cross images

--- a/features/index.html
+++ b/features/index.html
@@ -46,8 +46,9 @@ among several machines.
 is needed.<br>It's architecture independent, since it consists
 only of shell, Perl and Cfengine scripts.
 <li> Besides initial installations, it is also used for daily maintenance.
-<li> Creating customized chroot environments
-<li> Building your own disk image for cloud instances
+<li> Creating customized chroot environments, also cross-architecture
+for e.g. for embedded devices
+<li> Building your own disk image for cloud instances, also cross-architecture
 <li> Cloning machines using disk images is supported
 <li> Also bare-metal provisioning and deploying virtual machines is supported
 <li> Compared to tools like kickstart or cobbler for Red Hat, autoyast for SUSE or
